[refactor] v0.2.2 - DTO를 branchdown-api로 이전 및 코드 정리
- 주요 DTO(PointDto, StreamDto, CommonResponseDto)를 branchdown-api 라이브러리로 이전
- branchdown-api 의존성 추가 (JitPack)
- 예외 타입 개선: IllegalArgumentException → NoSuchElementException (404)
- JPA Converter 예외를 IllegalStateException으로 변경
- 불필요한 validation 의존성 제거, consul-discovery를 runtimeOnly로 변경
- 테스트 코드 간소화 및 리팩터링

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>